force-app/main/default/src/objects/Journey_Contact_MVN__c/Journey_Contact_MVN__c.object-meta.xml
<CustomObject>
    <description>Journey Contact represents a qualified or unqualified contact Journey entry in Marketing Cloud. This object is used as the main data entry source for the MC Journeys.</description>
    <label>Journey Contact</label>
    <nameField>
        <displayFormat>JC-{0000}</displayFormat>
        <label>Journey Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journey Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>