force-app/main/default/src/objects/Journey_Contact_MVN__c/fields/Account_MVN__c.field-meta.xml
<CustomField>
    <fullName>Account_MVN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person Account (Contact) that will be entered into the Marketing Cloud Journey.</description>
    <inlineHelpText>Person Account (Contact) that will be entered into the Marketing Cloud Journey.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Journey Contacts</relationshipLabel>
    <relationshipName>Journey_Contacts_MVN</relationshipName>
    <type>Lookup</type>
</CustomField>