force-app/main/default/src/objects/Journey_Contact_MVN__c/fields/Care_Plan_MVN__c.field-meta.xml
<CustomField>
    <fullName>Care_Plan_MVN__c</fullName>
    <description>Care Plan to which the Journey Entry is related.</description>
    <inlineHelpText>Care Plan to which the Journey Entry is related.</inlineHelpText>
    <label>Care Plan</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Journey Contacts</relationshipLabel>
    <relationshipName>Journey_Contacts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>