force-app/main/default/src/objects/Journey_Contact_MVN__c/fields/Entry_Date_MVN__c.field-meta.xml
<CustomField>
    <fullName>Entry_Date_MVN__c</fullName>
    <description>Date/Time the contact entered the Journey.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date/Time the contact entered the Journey.</inlineHelpText>
    <label>Entry Date</label>
    <type>DateTime</type>
</CustomField>