force-app/main/default/src/objects/Journey_Contact_MVN__c/fields/Exit_Date_MVN__c.field-meta.xml
<CustomField>
    <fullName>Exit_Date_MVN__c</fullName>
    <description>Date/Time the contact exited the Journey.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date/Time the contact exited the Journey.</inlineHelpText>
    <label>Exit Date</label>
    <type>DateTime</type>
</CustomField>