force-app/main/default/src/objects/Journey_Contact_MVN__c/fields/Journey_Code_MVN__c.field-meta.xml
<CustomField>
    <fullName>Journey_Code_MVN__c</fullName>
    <formula>Journey_MVN__r.Journey_Code_MVN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Journey Code</label>
    <type>Text</type>
</CustomField>