force-app/main/default/src/objects/Journey_Contact_MVN__c/fields/Journey_MVN__c.field-meta.xml
<CustomField>
    <fullName>Journey_MVN__c</fullName>
    <description>Journey into which the Journey Contact has been entered.</description>
    <label>Journey</label>
    <referenceTo>Journey_MVN__c</referenceTo>
    <relationshipLabel>Journey Contacts</relationshipLabel>
    <relationshipName>Journey_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>