force-app/main/default/src/objects/Journey_Contact_MVN__c/fields/Journey_Name_MVN__c.field-meta.xml
<CustomField>
    <fullName>Journey_Name_MVN__c</fullName>
    <description>The name of the journey. Used for timeline view display.</description>
    <formula>Journey_MVN__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Journey Name</label>
    <type>Text</type>
</CustomField>