force-app/main/default/src/objects/Journey_Contact_MVN__c/fields/Journey_Status_MVN__c.field-meta.xml
<CustomField>
    <fullName>Journey_Status_MVN__c</fullName>
    <formula>IF(ISNULL(Exit_Date_MVN__c) , &quot;Active&quot;, &quot;Inactive&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Journey Status</label>
    <type>Text</type>
</CustomField>