force-app/main/default/src/objects/Journey_Contact_MVN__c/fields/Last_Email_Received_MVN__c.field-meta.xml
<CustomField>
    <fullName>Last_Email_Received_MVN__c</fullName>
    <description>Describes the last email received for the contact within the journey.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Describes the last email received for the contact within the journey.</inlineHelpText>
    <label>Last Email Received</label>
    <length>200</length>
    <type>Text</type>
</CustomField>