force-app/main/default/src/objects/Journey_Contact_MVN__c/fields/Person_Contact_ID_MVN__c.field-meta.xml
<CustomField>
    <fullName>Person_Contact_ID_MVN__c</fullName>
    <formula>CASESAFEID(Account_MVN__r.PersonContactId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Person Contact ID</label>
    <type>Text</type>
</CustomField>