force-app/main/default/src/objects/Journey_Contact_MVN__c/validationRules/Marketing_Consent_Required_MVN.validationRule-meta.xml
<ValidationRule>
    <fullName>Marketing_Consent_Required_MVN</fullName>
    <active>true</active>
    <description>Verifies if Marketing Consent has been obtained.</description>
    <errorConditionFormula>Care_Plan_MVN__r.Has_Program_Consent_MVN__c = false</errorConditionFormula>
    <errorMessage>Marketing Consent is required to enroll this patient/caregiver in a marketing journey.</errorMessage>
</ValidationRule>