force-app/main/default/src/objects/Journey_Contact_MVN__c/validationRules/Primary_Email_Opt_In_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Email_Opt_In_Required</fullName>
    <active>true</active>
    <description>Verifies if the primary email is opted in for the account on the care plan.</description>
    <errorConditionFormula>Account_MVN__r.Primary_Email_Opt_In_MVN__c = false</errorConditionFormula>
    <errorMessage>The primary email for the account must be opted in.</errorMessage>
</ValidationRule>