force-app/main/default/src/objects/Journey_Contact_MVN__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account_MVN__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>